<resources>
    <string name="app_name" translatable="false">Family Health</string>
    <string name="lb" translatable="false">lb</string>
    <string name="kg" translatable="false">kg</string>
    <string name="st" translatable="false">st</string>
    <string name="cm" translatable="false">cm</string>
    <string name="ft" translatable="false">ft</string>
    <string name="Next">Next</string>
    <string name="desSplash">This action can contain ads</string>
    <string name="splash">This action can contain ads</string>
    <string name="Language">Language</string>
    <string name="NormalWeight">Normal weight</string>
    <string name="Difference">Difference</string>
    <string name="BodyComposition">Body Composition</string>
    <string name="Calculator">Calculator</string>
    <string name="Permission">Permission</string>
    <string name="titleIntro1" translatable="false">BMI Calculator</string>
    <string name="titleIntro2">Statistics</string>
    <string name="titleIntro3">Save Data</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Age">Age</string>
    <string name="Height">Height :</string>
    <string name="Weight">Weight :</string>
    <string name="bmi_error">Please enter the actual value</string>
    <string name="desIntro1">By using your weight and height information, you can easily calculate your body mass index and view your status</string>
    <string name="desIntro2">Allows statistics of calculated data. And all your information is kept confidential</string>
    <string name="desIntro3">Save your information and access it whenever you want</string>
    <string name="Exercise">Exercise</string>
    <string name="BMI">BMI</string>
    <string name="MAP">MAP</string>
    <string name="Year">Year</string>
    <string name="Month">Month</string>
    <string name="Day">Day</string>
    <string name="Ok">OK</string>
    <string name="Statistics">Statistics</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Update">Update</string>
    <string name="Adults">Adults</string>
    <string name="Teenagers">Teenagers</string>
    <string name="Date">Date</string>
    <string name="Notification">Notification</string>
    <string name="Camera">Camera</string>
    <string name="Location">Location</string>
    <string name="permission13">requires permission to use the Notification.</string>
    <string name="permissionOther">requires permission to use the Storage.</string>
    <string name="Continue">Continue</string>
    <string name="setting">Setting</string>
    <string name="Agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="title_dialog_permission">Feature Permission</string>
    <string name="content_dialog_permission">You have chosen not to ask for the storage and notification permission again. Please go to the app settings to grant permission.</string>
    <string name="title_rate_0">Do you like the app?</string>
    <string name="des_rate_0">Let us know your experience</string>
    <string name="title_rate_1">Oh, no!</string>
    <string name="des_rate_1">Please give us some feedback</string>
    <string name="title_rate_2">Oh, no!</string>
    <string name="des_rate_2">Please give us some feedback</string>
    <string name="title_rate_3">Oh, no!</string>
    <string name="des_rate_3">Please give us some feedback</string>
    <string name="title_rate_4">We love you too!</string>
    <string name="des_rate_4">Thanks for your feedback</string>
    <string name="title_rate_5">We love you too!</string>
    <string name="des_rate_5">Thanks for your feedback</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_exit">Exit</string>
    <string name="very_Severely_underweight">Very severely underweight</string>
    <string name="tv_154">&lt; 15.4</string>
    <string name="tv_154_255">15.4 – 25.5</string>
    <string name="tv_226_263">22.6 – 26.3</string>
    <string name="tv_264">&gt;= 26.4</string>
    <string name="tv_16">&lt; 16</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="tv_16_169">16.0 – 16.9</string>
    <string name="underweight">Underweight</string>
    <string name="tv_17_184">17.0 – 18.4</string>
    <string name="normal">Normal</string>
    <string name="tv_185_249">18.5 – 24.9</string>
    <string name="overweight">Overweight</string>
    <string name="tv_25_299">25.0 – 29.9</string>
    <string name="obese_Class_I">Obese Class I</string>
    <string name="tv_30_349">30.0 – 34.9</string>
    <string name="obese_Class_II">Obese Class II</string>
    <string name="tv_35_399">35.0 – 39.9</string>
    <string name="obese_class_III">Obese Class III</string>
    <string name="tv_40"> &gt;= 40.0</string>
    <string name="About">About</string>
    <string name="BMIForAdults">BMI for Adults </string>
    <string name="BMIForAdults1">(>21 years old)</string>
    <string name="BMIForTeenagers">BMI for Teenagers </string>
    <string name="BMIForTeenagers1">(&lt;=20 years old)</string>
    <string name="Save">Save</string>
    <string name="Centimeter">Centimeter</string>
    <string name="Feet">Feet</string>
    <string name="Kilogram">Kilogram</string>
    <string name="Stone">Stone</string>
    <string name="Pound">Pound</string>
    <string name="SavedSuccessfully">Saved successfully</string>
    <string name="DeleteConfirm">Delete confirm</string>
    <string name="desDelete">Are you sure you want to delete this record?</string>
    <string name="Delete">Delete</string>
    <string name="SignInNow">Sign in now</string>
    <string name="PleaseSignIn">Please sign in to continue our app</string>
    <string name="ResetPass">Reset Password</string>
    <string name="Forget">Retrieve your password if you have forgotten it</string>
    <string name="hintUserName">Enter your email…</string>
    <string name="hintPass">Enter your password</string>
    <string name="ForgetPassword"><u>Forget Password?</u></string>
    <string name="SignIn">Sign In</string>
    <string name="Reset">Reset</string>
    <string name="DontHave">Don’t have an account?</string>
    <string name="SignUp"> <u><i>Sign up </i></u></string>
    <string name="AlreadyHave">Already have an account</string>
    <string name="SignIn1"> <u><i>Sign in </i></u></string>
    <string name="SignUp1">Sign up</string>
    <string name="SignUpNow">Sign up now</string>
    <string name="PleaseSignUp">Please fill the details and create account</string>
    <string name="CheckMail">Check your email to change your password.</string>
    <string name="EmailValid">Your email is not valid</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="hintEnterPhone">Enter your phone number</string>
    <string name="Email">Email: </string>
    <string name="hintEnterEmail">Enter your Email</string>
    <string name="UserName">User name</string>
    <string name="hintUserName1">Enter your user name</string>
    <string name="PassWord">Password</string>
    <string name="hintPassWord">Enter your password</string>
    <string name="ConfirmPass">Confirm password</string>
    <string name="hintConfirmPass">Confirm your password</string>
    <string name="SignUpSuccess">Sign Up Success</string>
    <string name="SignUpFailed">Sign Up failed</string>
    <string name="NoEmpty">You must fill out all information fields</string>
    <string name="Passwords_do_not_match">Passwords do not match</string>
    <string name="provide_information">Provide Information</string>
    <string name="avatar">Avatar:</string>
    <string name="name">Name:</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="later">Later</string>
    <string name="save">Save</string>
    <string name="enter_friend_nickname">Enter your friend\'s nickname</string>
    <string name="write_your_name_here">Write your name here</string>
    <string name="input_your_phone_number">Input your phone number</string>
    <string name="over_25_char">Enter your image name 25 characters or less</string>
    <string name="invalid_phone_number">Invalid phone number!</string>
    <string name="enter_name">Enter your name!</string>
    <string name="enter_phone_number">Enter your phone number!</string>
    <string name="tv_Welcome">Welcome back!</string>
    <string name="Settings">Settings</string>
    <string name="Share">Share</string>
    <string name="Rate">Rate us</string>
    <string name="Version">Version</string>
    <string name="LogOut">Log Out</string>
    <string name="DateOfBirth">Date of birth</string>
    <string name="security_detail">Follow the link sent on your family phone install the pingo app, and enter the code</string>
    <string name="share_information">Share Information</string>
    <string name="qr_detail">This code will connect the pingo app with your parenting find your friend app and everything will start working!</string>
    <string name="share_code">Share code</string>
    <string name="my_security">My Code</string>
    <string name="share_qr">Share QR</string>
    <string name="share_with">Share with</string>
    <string name="download_app">Download application :</string>
    <string name="start_join">Start join</string>
    <string name="copied">Copied!</string>
    <string name="join_the_friend">Join with Family</string>
    <string name="join_friend_title">Enter the Family code to join with Family</string>
    <string name="join_friend_detail">The code can be obtained from the Family\'s application that created the connection</string>
    <string name="code">Code</string>
    <string name="InvalidCode">The code is invalid</string>
    <string name="join_with_friend">Join with friend successfully!</string>
    <string name="invalid_friend_code">Invalid Friend code!</string>
    <string name="Summary"><u><i>Summary </i></u></string>
    <string name="Moving">Moving</string>
    <string name="Step">Step</string>
    <string name="Distance">Distance</string>
    <string name="Recent">Recent</string>
    <string name="Gender">Gender</string>
    <string name="noData">No recent records</string>
    <string name="NoChartData">No Chart Data</string>
    <string name="DeletedSuccessfully">Deleted successfully</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="noStep">Step Counter Sensor not available!</string>
    <string name="friend_location">Friend Location</string>
    <string name="start">Start</string>
    <string name="turn_off">Turn Off</string>
    <string name="SELECT_AVATAR">SELECT AVATAR</string>
    <string name="des_Dialog_avt">Choose the avatar you want and your friends will see this interface on the realtime tracker screen</string>
    <string name="Save_avatar">Save Avatar</string>
    <string name="header_warning_permission">Warning permission</string>
    <string name="Message_perLocation">If you enable background location access, your location will always be shared with friends while you run the program in the background. Your location will be terminated when the application is closed or not utilized.Please allow this permission from settings to proceed further.</string>
    <string name="des_dialog_delete">Are you sure to delete this friend of yours?</string>
</resources>