<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.activity.SignInActivity">

    <ImageView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/poppinsBold_26"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/SignInNow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:text="@string/PleaseSignIn"
        style="@style/poppins_14"
        android:gravity="center"
        android:textColor="#CCFFFFFF"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:hint="@string/hintUserName"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColorHint="#CCFFFFFF"
        android:background="@drawable/bg_language_selector"/>
    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="#CCFFFFFF"
        android:background="@drawable/bg_language_selector"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgetPassword"
        android:layout_gravity="end"
        android:textColor="@color/main"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/SignIn"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:background="@drawable/bg_button_magenta"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DontHave"
            style="@style/poppins_14"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/SignUp"
            style="@style/poppins_14"
            android:textColor="@color/main"
            />
    </LinearLayout>


</LinearLayout>