<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.fragment.AboutFragment">

    <TextView
        android:id="@+id/tvTitleAbout"
        style="@style/poppinsBold_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/lineTabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleAbout"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="horizontal"
        android:background="@drawable/bg_language_selector"
        android:weightSum="2"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/Adults"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/Adults"
            android:background="@drawable/bg_button_magenta"
            style="@style/poppinsMedium_16"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/Teenagers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/Teenagers"
            style="@style/poppinsMedium_16"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lineTabs">

        <TextView
            android:id="@+id/des1"
            style="@style/poppinsMedium_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMIForAdults"
            android:textColor="@color/YellowFF" />

        <TextView
            android:id="@+id/des2"
            style="@style/poppins_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMIForAdults1"
            android:textColor="@color/YellowFF" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_language_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/item_about" />

</androidx.constraintlayout.widget.ConstraintLayout>