<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/viewDialog"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="17sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_warning_permission"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:gravity="start"
            android:text="@string/Message_perLocation"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/txtAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17sp"
            android:layout_marginVertical="15sp"
            android:background="@drawable/bg_button_color_app_circle"
            android:backgroundTint="@color/main"
            android:gravity="center"
            android:paddingVertical="13sp"
            android:text="@string/Agree"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>